feat - docker setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-# create service
 services:
   app:
     build:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      - ./:home/app
+      - ./:/home/app
     ports:
-      - "3000:3000"
-      
+      - 3000:3000
